--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <section class="section-title display-flex">
 
 <div class="bannar">
-    <h2 class="bannar-start">Empowering<br>
-        students from small<br> age towards vision</h2>
+    <h2 class="bannar-start"><span class="span">Empowering</span><br>
+        students from small<br> age <span class="span-btn">towards vision</span></h2>
     <div class="bannar-contant">
-        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+        <p>With the courage, Confidence, Creativity and Compassion to make<br>their Unique Contribution in a Diverse and Dynamic World.</p>
     </div>
     <button class="btn-primary">Enroll Now</button>
 </div>
