--- a/index.html
+++ b/index.html
@@ -137,14 +137,19 @@
 
 <main>
 
+   
+
+
+
+
+<section class="section-grid">
+
+
     <div>
         <h3 class="stories">Our Stories</h3>
     </div>
 
 
-
-
-<section>
 
 
 <div class="box-styles">
@@ -244,7 +249,7 @@
                 </ul>
             </div>
             <div class="footer-contants">
-                <h3>Keep In Touch</h3>
+                <h3 class="footer">Keep In Touch</h3>
                 <ui class="icons">
                 <li><a href=""><img src="assets/fb.png" alt="" class=""></a></li>
                 <li><a href=""><img src="assets/dribble.png" alt=""></a></li>
